# rs-s

./: .gitignore  Cargo.toml
src/: cli.rs  main.rs
src/database/: connect.rs
