[package]
name = "rs-s"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version="4.5.37", features=["derive"]}
indicatif = "0.17.11"
owo-colors = "4.2.0"
reqwest = "0.12.15"
rss = "2.0.12"
rusqlite = "0.35.0"
termtree = "0.5.1"
tokio = {version="1.44.2", features=["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
